--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,13 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pylint = "*"
+autopep8 = "*"
 
 [packages]
 bcrypt = "==3.1.7"
 Flask = "==1.0.3"
+flak-mysqldb = "*"
 
 [requires]
 python_version = "3.6"
