--- a/configuracion.conf
+++ b/configuracion.conf
@@ -1,8 +1,19 @@
-#INICIO#
+#INICIO
 name = Sistema de gestiÃ³n de control de aguas
 disA = 30.1
 mail = monitycont@gmail.com
 temA = 26
 humA = 31
-#FIN##
-#CHANGED#
+#FIN##INICIO##
+        name = Sistema de gestión de control de aguas
+        disA = 30.06
+        mail = monitycont1@gmail.com
+        temA = 27
+        humA = 27
+        ###FIN#####INICIO##
+        name = Sistema de gestn de control de aguas
+        disA = 30.1
+        mail = monitycont@gmail.com
+        temA = 26
+        humA = 31
+        ###FIN###
