--- a/configuracion.conf
+++ b/configuracion.conf
@@ -1,8 +1,13 @@
 #INICIO#
 name = Sistema de gestión de control de aguas
-disA = 30.1
 mail = monitycont@gmail.com
+altu = 100
+disB = 30
+disA = 85
 temA = 26
 humA = 31
+htTm = 15
+disT = 60
+cpuS = 5
 #FIN##
 #CHANGED#
