--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
     "python.pythonPath": "C:\\Program Files (x86)\\Python37-32\\python.exe",
-    "python.linting.pylintEnabled": true,
+    "python.linting.pylintEnabled": false,
     "python.linting.enabled": true,
     "python.linting.flake8Enabled": false,
-    "python.linting.pep8Enabled": false,
+    "python.linting.pep8Enabled": true,
     "python.formatting.provider": "autopep8"
 }
