--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,9 @@ bcrypt = "==3.1.7"
 Flask = "==1.0.3"
 flak-mysqldb = "*"
 flaskext = "*"
+Flask-MySQL = "*"
+Flask-Session = "*"
+Adafruit-DHT = "*"
 
 [requires]
-python_version = "3"
+python_version = "3.6"
